--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "themes/kiss"]
 	path = themes/kiss
 	url = https://github.com/ribice/kiss.git
+[submodule "public"]
+	path = public
+	url = git@github.com:palnabarun/blog
